--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "replace-it",
+  "name": "@faiz-sulistiyo/replace-it",
   "version": "1.0.0",
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
